<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Office Bot</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="done_button">DONE</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="skip_button">SKIP</string>
    <string name="titleInNavigate">Office</string>
    <string name="MSG_CONTENT_BUNDLE_KEY">MSG_CONTENT</string>
    <string name="MSG_ID_BUNDLE">MSG_ID</string>
    <string name="MSG_KEY">MSG</string>
    <string name="MSG_OWNER_BUNDLE_KEY">MSG_OWNER</string>
    <string name="MSG_TIME_BUNDLE_KEY">MSG_TIME</string>
    <string name="_5">5</string>
    <string name="_5_am">time stamp</string>
    <string name="accept_request">Request Accepted</string>
    <string name="activity_key">Activity</string>
    <string name="add">ADD</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_new_group">Add New Group</string>
    <string name="add_new_tag_activity">Add New Tag</string>
    <string name="add_permission_menu">Add Permission</string>
    <string name="already_exist_go_back">Already Exist !! Sign in</string>
    <string name="already_friend">Already Friend</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach_file">Attach file</string>
    <string name="audio_key">audio</string>
    <string name="block">BLOCK</string>
    <string name="block_request">Request Blocked</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Canceled</string>
    <string name="cancel_btn">Cancel</string>
    <string name="case_type_key">case_type</string>
    <string name="change_password">Change Password</string>
    <string name="color">\#2196F3</string>
    <string name="confirm_pass_error">Password is not matched</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="content_key">content</string>
    <string name="create">Create</string>
    <string name="data_key">data</string>
    <string name="default_dir">/sdcard</string>
    <!--<string name="default_web_client_id">797840866301-pm721iaet71hepu1moqa5ufpvo3qljkm.apps.googleusercontent.com</string>-->
    <string name="define_appintro" />
    <string name="delete">Delete</string>
    <string name="dnt_sh_group_key">dont_share_groups</string>
    <string name="dnt_sh_user_key">dont_share_users</string>
    <string name="don_t_have_a_account_create_one">"Don't have a account? Create one."</string>
    <string name="don_t_share_with">"Don't Share With"</string>
    <string name="done">Done</string>
    <string name="edit_text_dialoge">Edit</string>
    <string name="email">Email</string>
    <string name="email_error">Email example: example_cs.uol@cs.uol.edu.pk Or example@example.com</string>
    <string name="email_key">email</string>
    <string name="empty_field">field is empty</string>
    <string name="enter_here">Enter Here</string>
    <string name="enter_name_for_the_tag">Enter Name For The Tag</string>
    <string name="facebook_app_id">395696410763795</string>
    <string name="field_empty">Input Field is Empty.</string>
    <string name="field_empty_email">Email Field is Empty.</string>
    <string name="fields_empty">All Field should be filled</string>
    <string name="forget_password">Forget Password</string>
    <string name="friend">Friend</string>
    <string name="friend_group_element">Friends</string>
    <string name="friend_list">Friend List</string>
    <string name="friend_list_activity">Friends List</string>
    <string name="friends_only_key">friends_only</string>
    <!--<string name="gcm_defaultSenderId">797840866301</string>-->
    <string name="go">Go</string>
    <string name="go_btn">Go</string>
    <!--<string name="google_api_key">AIzaSyBbmmkyOtFXklTn7FLTPWKK6FbZ4oaid_M</string>-->
    <!--<string name="google_app_id">1:797840866301:android:52e9dc8d5018610f</string>-->
    <!--<string name="google_crash_reporting_api_key">AIzaSyBbmmkyOtFXklTn7FLTPWKK6FbZ4oaid_M</string>-->
    <string name="group">Group</string>
    <string name="group_activity">Groups</string>
    <string name="group_id_key">group_id</string>
    <string name="groups">Groups</string>
    <string name="groups_integers_key">groups</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="id_key">id</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="message_activity">Note</string>
    <string name="message_id_key">message_id</string>
    <string name="msg_content">msg content</string>
    <string name="msg_hint">write message....</string>
    <string name="msg_owner_name">Msg Owner Name</string>
    <string name="n">N</string>
    <string name="name">Name</string>
    <string name="name_error">Only Alphabet is allowed! Limit 5–20</string>
    <string name="name_key">name</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nfc_activate">Please activate NFC and press Back to return to the application!</string>
    <string name="nfc_activity">NFC</string>
    <string name="nfc_not_support">"This device doesn't support NFC."</string>
    <string name="no">No</string>
    <string name="not_success">UnSuccessfully</string>
    <string name="office">Office</string>
    <string name="office_virtue_navigation">Office Bot Navigation</string>
    <string name="okay">Okay</string>
    <string name="or">Or</string>
    <string name="pass_changed">Password Changed</string>
    <string name="password">Password</string>
    <string name="password_error">Password 8–10 Character</string>
    <string name="password_key">password</string>
    <string name="permission">Permission</string>
    <string name="permission_case_key">permission_case</string>
    <string name="permission_id_key">permission_id</string>
    <string name="permission_key">permission</string>
    <string name="permission_mobile">Please Provide Permission To Run This App</string>
    <string name="phone">Phone</string>
    <string name="phone_key">phone</string>
    <string name="pincode">Check Your Email for Pin Code!</string>
    <string name="private_tag">This tag is private. Set by Owner.</string>
    <string name="profile">Profile</string>
    <string name="profile_activity">Profile</string>
    <string name="public_key">public</string>
    <string name="public_permission">Public</string>
    <string name="r">R</string>
    <string name="r_w">R/W</string>
    <string name="record_audio">Record Audio</string>
    <string name="request_friend">Request Friend</string>
    <string name="request_id_key">request_id</string>
    <string name="request_send">Request Send</string>
    <string name="requests">Requests</string>
    <string name="requests_activity">Requests</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="scan">Scan</string>
    <string name="search_here">Search Here</string>
    <string name="seen_by">Seen By</string>
    <string name="select_file">Select a File</string>
    <string name="selective">Selective</string>
    <string name="send">Send</string>
    <string name="send_forget_email">Send</string>
    <string name="send_reqeu">Request Send</string>
    <string name="sending_loading">Sending…</string>
    <string name="set_permission">Set Permission</string>
    <string name="setting">Profile Setting</string>
    <string name="share_group_key">share_groups</string>
    <string name="share_user_key">share_users</string>
    <string name="share_with">Share With</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="ssn_key">ssn</string>
    <string name="success">Add Successfully</string>
    <string name="swipe_down_to_refresh_empty">Swipe Down To Refresh List OR See Help Section in Navigation Menu</string>
    <string name="tag_activity">Tags</string>
    <string name="tag_id_key">tag_id</string>
    <string name="tag_main_activity">Post Notes</string>
    <string name="tag_main_message_activity">Comments</string>
    <string name="tags">Tags</string>
    <string name="time_stamp">time stamp</string>
    <string name="timeout">Time Out</string>
    <string name="timeout_key">timeout</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="token_key">token</string>
    <string name="touch_the_nfc_tag">Touch The NFC Tag!</string>
    <string name="type_key">type</string>
    <string name="user">User</string>
    <string name="user2_id_key">user2_id</string>
    <string name="user_data_key">user</string>
    <string name="user_id_key">user_id</string>
    <string name="users_integer_key">users</string>
    <string name="valid_email">Email is not valid.</string>
    <string name="what_is_happening_here">What is Happening Here</string>
    <string name="who_would_see_this">Who would see this?</string>
    <string name="write_message">Write Message....</string>
    <string name="yesterday">yesterday</string>
    <string name="image_type">image-type</string>
    <string name="no_reply">No Reply!</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="group_member">Group Member</string>
    <string name="log_success">Login Successfully</string>
    <string name="incorrect_credential">Incorrect Credential</string>
    <string name="pass_or_email_valid">Email Or Password Field is not Valid</string>
    <string name="pass_email_empty">Email Or Password Field is Empty</string>
    <string name="signing">Signing in..</string>
    <string name="new_group">Creating New Group…</string>
    <string name="total_messages">Total Messages</string>
    <string name="flag_other">FLAG_ID</string>
    <string name="note_send">Note Post</string>
    <string name="EXTRA_ARRAY">SendArray</string>
    <string name="history">History</string>
    <string name="history_activity">History Tags</string>
    <string name="add_new_picture">Add Picture</string>
    <string name="image_src_key">image_src</string>
    <string name="image_key">image</string>
    <string name="invitation_cta">invitationCta</string>
    <string name="invitation_title">OfficeBot</string>
    <string name="invitation_message">Share IT</string>
    <string name="invitation_deep_link">www.google.com</string>
    <string name="share">Share</string>
    <string name="total_msg">total_msg</string>
    <string name="selection_list">Selection List</string>
</resources>
