<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_tag_permission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selection_name_base"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="@string/name"
                android:textSize="20.0sp" />

            <RadioButton
                android:id="@+id/checked_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/n" />

            <RadioButton
                android:id="@+id/checked_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/r" />

            <RadioButton
                android:id="@+id/checked_r_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/r_w" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>