<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_share_permission"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/nav"
        layout="@layout/nav_bar_code" />

    <TableLayout
        android:id="@+id/tbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav">

        <TableRow>

            <TableRow android:layout_weight="1.0">

                <RadioButton
                    android:id="@+id/checkBoxUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20.0dip"
                    android:text="@string/user"
                    android:textSize="20.0sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/user_select_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20.0dip"
                    android:drawableEnd="@drawable/zzz_arrow_right_bold"
                    android:onClick="onClick"
                    android:textSize="20.0sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableRow>

        <TableRow>

            <TableRow android:layout_weight="1.0">

                <RadioButton
                    android:id="@+id/checkBoxGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20.0dip"
                    android:text="@string/group"
                    android:textSize="20.0sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/group_select_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20.0dip"
                    android:drawableEnd="@drawable/zzz_arrow_right_bold"
                    android:onClick="onClick"
                    android:textSize="20.0sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:weightSum="1">

        <android.widget.Button
            android:id="@+id/cancel_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50.0dip"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:onClick="cancel"
            android:text="@string/cancel_btn" />

        <android.widget.Button
            android:id="@+id/go_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50.0dip"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/go_btn" />


    </LinearLayout>

</RelativeLayout>