<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/inner_layout_scroll"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/inner_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:hint="@string/login"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_label_email"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email"
                android:labelFor="@+id/input_email"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawablePadding="12.0dip"
                    android:drawableStart="@drawable/zzz_email_variant"
                    android:inputType="textAutoComplete|textAutoCorrect|textEmailAddress"
                    android:maxLines="1"
                    android:orientation="vertical" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_label_password"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:labelFor="@+id/input_password"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12.0dip"
                    android:drawableStart="@drawable/zzz_key"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:orientation="vertical" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10.0dip"
                android:background="@drawable/round_button"
                android:drawableStart="@drawable/zzz_login"
                android:gravity="center"
                android:onClick="login"
                android:text="@string/login"
                android:textAlignment="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_margin="10.0dip"
                android:gravity="center"
                android:onClick="getSignUp"
                android:text="@string/don_t_have_a_account_create_one"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="18.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/fb_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/sign_in"
                        android:visibility="gone" />
                    <!--android:background="@color/color_app"-->
                </FrameLayout>

                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/image_type"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fb_ic" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/image_type"
                    android:src="@drawable/g_ic" />
            </LinearLayout>

            <TextView
                android:id="@+id/link_forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/zzz_key_variant"
                android:gravity="center"
                android:onClick="getForgetPassword"
                android:text="@string/forget_password"
                android:textSize="18.0sp" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20.0dip" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20.0dip" />

</android.support.constraint.ConstraintLayout>